src/test/ui/structs/struct-path-alias-bounds.stderr
error[E0277]: the trait bound `NoClone: Clone` is not satisfied
  --> $DIR/struct-path-alias-bounds.rs:9:13
   |
LL |     let s = A { a: NoClone };
   |             ^ the trait `Clone` is not implemented for `NoClone`
   |
note: required by a bound in `S`
  --> $DIR/struct-path-alias-bounds.rs:3:13
   |
LL | struct S<T: Clone> { a: T }
   |             ^^^^^ required by this bound in `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
